Page MenuHome GnuPG

write-env-file fails sliently with enable-ssh-support
Closed, ResolvedPublic

Description

As stated in the changelog the --write-env-file option is now being silently
ignored by gpg-agent. However this appears to silently break existing
configurations where the SSH_AUTH_SOCK variable was being read from the env file
created by this option.

The agent should either provide a warning at launch if this option is being used
as it has now been removed and does not function so that users can update their
configurations, or it should continue to create a file containing the
SSH_AUTH_SOCK variable so configurations relying on this to have a working
ssh-agent should continue to work.

Details

Version
2.1.4

Event Timeline

Vality set Version to 2.1.4.
Vality added a subscriber: Vality.

You need to to set SSH_AUTH_SOCK yourself. See the example section in the
gpg-agent man page.

I will consider to print a warning.

werner lowered the priority of this task from Normal to Wishlist.Jun 17 2015, 12:39 PM
werner added a project: Feature Request.
werner removed a project: Bug Report.
werner claimed this task.

Done with commit 010d26a for 2.1.6