g10/main.h
@@ -134,8 +134,6 @@ char *pct_expando(const char *string,struct expando_args *args);
 void deprecated_warning(const char *configname,unsigned int configlineno,
 			const char *option,const char *repl1,const char *repl2);
 void deprecated_command (const char *name);
-void obsolete_option (const char *configname, unsigned int configlineno,
-                      const char *name);
 void obsolete_scdaemon_option (const char *configname,
                                unsigned int configlineno, const char *name);
 
